style/style.css
:root {
  --branding-color: #9c646f;
  --secondary-color: #ddd9d5;
  --main-color: #dac4c6;
  --heading-font-family: "Playfair Display", serif;
  --default-font-family: "Poppins", sans-serif;
}

body {
  font-family: var(--default-font-family);
  background: var(--main-color);
}

h1,
h3,
h4,
h5,
h6 {
  color: #0e100d;
  font-family: var(--heading-font-family);
  font-weight: bold;
}

h1 {
  font-size: 96px;
  line-height: 1.5;
}

h2 {
  color: var(--branding-color);
  font-family: var(--heading-font-family);
  font-weight: bold;
  font-size: 64px;
}

h3 {
  font-size: 48px;
}
p {
  font-family: var(--default-font-family);
  font-weight: normal;
  font-size: 16px;
  line-height: 30px;
}

.hello {
  color: var(--branding-color);
}

.hero {
  background: var(--secondary-color);
  text-align: center;
  padding: 80px 20px;
}

.hero p {
  font-size: 36px;
  font-weight: bold;
  margin: 0;
}

.hero h2 {
  font-family: "Poppins", sans-serif;
  font-weight: normal;
  line-height: 1.5;
  font-size: 24px;
}

.content-container {
  padding: 60px 20px;
}

.content h1 {
  font-size: 64px;
  line-height: 80px;
}
.content h2 {
  font-size: 18px;
  font-family: var(--default-font-family);
}

.content h3 {
  font-size: 24px;
  line-height: 1.5;

  font-family: var(--default-font-family);
}

.content p {
  font-size: 14px;
}

.content {
  margin: 30px;
}

.btn-branding {
  background: var(--branding-color);
  border-radius: 4px;
  color: #fff;
  font-size: 18px;
  line-height: 27px;
  padding: 12px;
  transition: all 100ms ease-in-out;
}

.btn-branding:hover {
  background: var(--main-color);
  border: 1px solid var(--branding-color);
}

.btn-branding-outline {
  color: var(--branding-color);
  border: 1px solid var(--branding-color);
  border-radius: 4px;
  font-size: 18px;
  line-height: 27px;
  padding: 12px;
  transition: all 100ms ease-in-out;
}

.btn-branding-outline:hover {
  color: var(--main-color);
  background: var(--branding-color);
}

.project-description {
  padding: 120px 60px;
}

.project-links {
  color: #0e100d;
  text-decoration: none;
  transition: all 100ms ease-in-out;
}

.project-links:hover {
  color: var(--branding-color);
  text-decoration: underline;
  cursor: pointer;
}

.header-name {
  font-size: 20px;
}

nav {
  padding: 20px 0;
}

nav ul {
  margin: 0;
  padding: 0;
}

nav li {
  display: inline;
  list-style: none;
  line-height: 42px;
  margin-left: 15px;
}

nav a {
  text-decoration: none;
  color: #272142;
  transition: all 100ms ease-in-out;
}

nav a:hover,
nav li.active a {
  color: var(--branding-color);
}

img {
  border: 2px solid var(--branding-color);
  border-radius: 5px;
  padding: 20px;
  background-color: var(--secondary-color);
}

footer {
  margin: 60px 0;
}

footer .contact-box {
  background: var(--secondary-color);
  padding: 30px 120px;
  border-radius: 10px;
}

footer .contact-box p {
  margin: 10px;
}

footer .email-link {
  text-decoration: none;
  color: black;
  font-size: 24px;
}

footer .email-link:hover {
  color: var(--branding-color);
}

footer .social-links a {
  margin: 0 20px;
  color: var(--branding-color);
  background: var(--secondary-color);
  padding: 10px 14px;
  border-radius: 50%;
  font-size: 18px;
  transition: all 100ms ease-in-out;
}

footer .social-links a:hover {
  color: #fff;
  background: var(--branding-color);
}

@media (max-width: 900px) {
  h1 {
    font-size: 44px;
    line-height: 56px;
  }

  h2 {
    font-size: 44px;
  }

  h3 {
    font-size: 26px;
  }

  .content {
    text-align: center;
    padding: 0;
  }
  .project-description {
    padding: 0;
    text-align: center;
  }

  nav a {
    font-size: 14px;
    margin: 5px;
  }
}

